another factor 1.8.

* The special "of_class" introduction rule for 'class' definitions has
been renamed from "class.NAME.of_class.intro" to "NAME.intro_of_class"
(where NAME is the name specification of the class). E.g. see the HOL
library:

  class.preorder.of_class.intro  ~>  preorder.intro_of_class
  class.order.of_class.intro  ~> order.intro_of_class


*** Document preparation ***

* Support for interactive document preparation in PIDE, notably via the
Isabelle/jEdit Document panel.

* Various well-known LaTeX styles are included as Isabelle components,
with demo documents in the regular Isabelle "doc" space:

  - Easychair as session "Demo_Easychair" / doc "demo_easychair"
  - EPTCS as session "Demo_EPTCS" / doc "demo_eptcs"
  - FoilTeX as session "Demo_FoilTeX" / doc "demo_foiltex"
  - Dagstuhl LIPIcs style as session "Demo_LIPIcs" / doc "demo_lipics"
  - Springer LaTeX LNCS style as session "Demo_LLNCS" / doc "demo_llncs"

* Support for more "cite" antiquotations, notably for \nocite and
natbib's \citet / \citep. The antiquotation syntax now supports
control-symbol-cartouche form, with an embedded argument:
\<^cite>\<open>arg\<close>. The embedded argument syntax supports both the optional
and mandatory argument of the underlying \cite-like macro.

Examples:

  \<^cite>\<open>\<open>\S1.2\<close> in "isabelle-system"\<close>
  \<^cite>\<open>"isabelle-system" and "isabelle-jedit"\<close>
  \<^nocite>\<open>"isabelle-isar-ref"\<close>

The old antiquotation option "cite_macro" has been superseded by
explicit syntax: \<^cite>\<open>\<dots> using macro_name\<close>.

The command-line tool "isabelle update -u cite" helps to update former
uses of LaTeX \cite commands and old-style @{cite "name"} document
antiquotations.


*** HOL ***

* Sledgehammer:
  - Added an inconsistency check mode to find likely unprovable
    conjectures. It is disabled by default and can be controlled using
    the 'falsify' option.